# tree-sitter-server_timing

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-server_timing.h  tree-sitter-server_timing.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_server_timing/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterServerTimingTests/: TreeSitterServerTimingTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: server_timing.txt
