[package]
name = "tree-sitter-server-timing"
description = "A parser for the HTTP Server-Timing Header"
version = "0.1.0"
authors = ["Derek Stride <derek@stride.host>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "server-timing"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/derekstride/tree-sitter-server_timing"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.6"
